samples/_failures_safe/1761691972_a45b9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c163895.c: In function ‘main’:
./samples/SAFE/__tmp_0c163895.c:179:12: error: missing terminating " character
  179 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_0c163895.c:179:5: error: expected expression at end of input
  179 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_0c163895.c:179:5: error: expected declaration or statement at end of input
